--- a/style.css
+++ b/style.css
@@ -49,9 +49,9 @@ p {
 #menu {
   margin: 0px;
   padding: 0px;
-  background-color: #e5e5e5;
+  background-color: #3F3F3F;
   width: 100%;
-  border-bottom:1px solid #d2d2d2;
+  border-bottom:1px solid #BEBEBE;
 }
 
 #menu ul {
@@ -71,13 +71,16 @@ p {
 }
 
 #menu li a {
-  color: #a8a8a8;
+  color: #646464;
   text-decoration:none;
 }
 
-#menu li:hover { border-bottom:6px solid #790B1A; }
-#menu li.active a { color: #323232; }
-#menu li:hover a { color: #323232; }
+#menu li:hover { 
+  border-bottom:6px solid #790B1A; 
+}
+
+#menu li.active a { color: #E0E0E0; }
+#menu li:hover a { color: #E0E0E0; }
 
 #content {
   padding: 25px 80px 60px 45px;
