--- a/style.css
+++ b/style.css
@@ -36,8 +36,8 @@ p {
 .intro { clear:both; }
 
 .award {
-  background-color: #E8E8E8; 
-  padding: 10px;
+  background-color: #E0E0E0; 
+  padding: 10px 15px;
   margin-top: 12px;
   margin-bottom: 15px;
   border-radius: 5px;
