--- a/style.css
+++ b/style.css
@@ -75,7 +75,7 @@ p {
 #menu li a {
   color: #646464;
   text-decoration:none;
-  text-shadow: -1px -1px 1px #fff, 1px 1px 1px #000;
+  text-shadow: 0px 1px 1px #7d7d7d;
 }
 
 #menu li:hover { 
