--- a/yuma2/main.css
+++ b/yuma2/main.css
@@ -4,11 +4,46 @@
   color:#000;
   background-color:#fff;
   padding:5px;
-  opacity:0.5;
   border-radius: 5px;
   -moz-border-radius: 5px;
   -webkit-border-radius: 5px;
   -khtml-border-radius: 5px;
+
+  /* Firefox */
+  -moz-transition-property: opacity;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-delay: 0s;
+  /* WebKit */
+  -webkit-transition-property: opacity;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-delay: 0s;
+  /* Opera */
+  -o-transition-property: opacity;
+  -o-transition-duration: 0.5s;
+  -o-transition-delay: 0s;
+  /* Standard */
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  transition-delay: 0s;
+}
+
+.yuma-canvas {
+  /* Firefox */
+  -moz-transition-property: opacity;
+  -moz-transition-duration: 0.5s;
+  -moz-transition-delay: 0s;
+  /* WebKit */
+  -webkit-transition-property: opacity;
+  -webkit-transition-duration: 0.5s;
+  -webkit-transition-delay: 0s;
+  /* Opera */
+  -o-transition-property: opacity;
+  -o-transition-duration: 0.5s;
+  -o-transition-delay: 0s;
+  /* Standard */
+  transition-property: opacity;
+  transition-duration: 0.5s;
+  transition-delay: 0s;
 }
 
 body {
