--- a/toponym_identification/detection/style.css
+++ b/toponym_identification/detection/style.css
@@ -33,4 +33,5 @@ html, body {
   -moz-box-shadow: 3px 3px 4px #000;
   -webkit-box-shadow: 3px 3px 4px #000;
   box-shadow: 3px 3px 4px #000;
+  pointer-events: none;
 }
